--- a/package.json
+++ b/package.json
@@ -8,32 +8,34 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.11.0",
-    "@react-native-community/masked-view": "^0.1.6",
+    "@react-native-community/async-storage": "~1.11.0",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
-    "expo": "~37.0.3",
+    "expo": "^38.0.0",
     "faker": "^4.1.0",
-    "react": "16.13.1",
-    "react-dom": "~16.9.0",
-    "react-native": "0.63.2",
-    "react-native-gesture-handler": "^1.6.1",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-paper": "^3.10.1",
-    "react-native-reanimated": "^1.7.1",
-    "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.2.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "expo-network": "~2.2.1",
+    "expo-notifications": "~0.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@types/faker": "^4.1.12",
-    "@types/react": "~16.9.23",
-    "@types/react-native": "~0.61.17",
-    "babel-preset-expo": "~8.1.0",
-    "typescript": "~3.8.3"
+    "@types/react": "~16.9.41",
+    "@types/react-native": "~0.62.13",
+    "babel-preset-expo": "^8.2.3",
+    "typescript": "~3.9.5"
   },
   "private": true
 }
