--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
+    "@types/expo": "^33.0.1",
+    "@unimodules/react-native-adapter": "^5.4.0",
     "expo": "^38.0.0",
+    "expo-background-fetch": "~8.3.0",
+    "expo-network": "~2.2.1",
+    "expo-notifications": "~0.3.3",
+    "expo-permissions": "~9.0.1",
     "faker": "^4.1.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
@@ -25,15 +31,13 @@
     "react-native-screens": "~2.9.0",
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "~0.11.7",
-    "expo-network": "~2.2.1",
-    "expo-notifications": "~0.3.3"
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@types/faker": "^4.1.12",
-    "@types/react": "~16.9.41",
-    "@types/react-native": "~0.62.13",
+    "@types/react": "^16.9.44",
+    "@types/react-native": "^0.62.18",
     "babel-preset-expo": "^8.2.3",
     "typescript": "~3.9.5"
   },
