--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
     "@types/expo": "^33.0.1",
-    "@unimodules/react-native-adapter": "^5.4.0",
+    "@unimodules/react-native-adapter": "~5.4.0",
     "expo": "^38.0.0",
     "expo-background-fetch": "~8.3.0",
     "expo-network": "~2.2.1",
@@ -36,8 +36,8 @@
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@types/faker": "^4.1.12",
-    "@types/react": "^16.9.44",
-    "@types/react-native": "^0.62.18",
+    "@types/react": "~16.9.41",
+    "@types/react-native": "~0.62.13",
     "babel-preset-expo": "^8.2.3",
     "typescript": "~3.9.5"
   },
