--- a/package.json
+++ b/package.json
@@ -11,27 +11,35 @@
     "@react-native-community/async-storage": "~1.11.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.5.2",
+    "@react-navigation/material-top-tabs": "^5.2.16",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
     "@types/expo": "^33.0.1",
+    "@types/i18n-js": "^3.0.3",
     "@unimodules/react-native-adapter": "~5.4.0",
     "expo": "^38.0.0",
     "expo-background-fetch": "~8.3.0",
+    "expo-localization": "~8.2.1",
     "expo-network": "~2.2.1",
     "expo-notifications": "~0.3.3",
     "expo-permissions": "~9.0.1",
     "faker": "^4.1.0",
+    "fiction-expo-restart": "^1.0.4",
+    "i18n-js": "^3.7.1",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-maps": "^0.27.1",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-tab-view": "^2.15.1",
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
