--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "expo-background-fetch": "~8.3.0",
     "expo-localization": "~8.2.1",
     "expo-network": "~2.2.1",
-    "expo-notifications": "~0.3.3",
+    "expo-notifications": "^0.12.3",
     "expo-permissions": "~9.0.1",
     "faker": "^4.1.0",
     "fiction-expo-restart": "^1.0.4",
@@ -33,7 +33,7 @@
     "randomcolor": "^0.6.2",
     "react": "17.0.1",
     "react-dom": "16.11.0",
-    "react-native": "0.64.2",
+    "react-native": "^0.64.2",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-maps": "^0.27.1",
     "react-native-paper": "^3.10.1",
@@ -44,9 +44,10 @@
     "react-native-tab-view": "^2.15.1",
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "~0.11.7",
+    "react-native-web": "^0.17.1",
     "react-native-wheel-of-fortune": "0.0.8",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "expo-updates": "~0.2.8"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
