--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@popmotion/popcorn": "^0.4.4",
-    "@react-native-community/async-storage": "~1.11.0",
+    "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/material-top-tabs": "^5.2.16",
@@ -19,43 +19,43 @@
     "@types/expo": "^33.0.1",
     "@types/i18n-js": "^3.0.3",
     "@types/randomcolor": "^0.5.5",
-    "@unimodules/react-native-adapter": "~5.4.0",
+    "@unimodules/react-native-adapter": "~6.3.4",
     "d3-shape": "^1.3.7",
-    "expo": "^38.0.0",
-    "expo-background-fetch": "~8.3.0",
-    "expo-localization": "~8.2.1",
-    "expo-network": "~2.2.1",
-    "expo-notifications": "^0.12.3",
-    "expo-permissions": "~9.0.1",
+    "expo": "^42.0.0",
+    "expo-background-fetch": "~9.2.2",
+    "expo-localization": "~10.2.0",
+    "expo-network": "~3.2.0",
+    "expo-notifications": "~0.12.3",
+    "expo-permissions": "~12.1.1",
+    "expo-updates": "~0.8.2",
     "faker": "^4.1.0",
     "fiction-expo-restart": "^1.0.4",
     "i18n-js": "^3.7.1",
     "randomcolor": "^0.6.2",
-    "react": "17.0.1",
-    "react-dom": "16.11.0",
-    "react-native": "^0.64.2",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-maps": "^0.27.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-maps": "0.28.0",
     "react-native-paper": "^3.10.1",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-safe-area-context": "~3.0.7",
-    "react-native-screens": "~2.9.0",
-    "react-native-svg": "12.1.0",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
+    "react-native-svg": "12.1.1",
     "react-native-tab-view": "^2.15.1",
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "^0.17.1",
+    "react-native-web": "~0.13.12",
     "react-native-wheel-of-fortune": "0.0.8",
-    "redux": "^4.0.5",
-    "expo-updates": "~0.2.8"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
+    "@babel/core": "~7.9.0",
     "@types/faker": "^4.1.12",
-    "@types/react": "~16.9.41",
-    "@types/react-native": "~0.62.13",
-    "babel-preset-expo": "^8.2.3",
-    "typescript": "~3.9.5"
+    "@types/react": "~16.9.35",
+    "@types/react-native": "~0.63.2",
+    "babel-preset-expo": "8.3.0",
+    "typescript": "~4.0.0"
   },
   "private": true
 }
