--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@freakycoder/react-native-bounceable": "^0.2.5",
     "@popmotion/popcorn": "^0.4.4",
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/masked-view": "0.1.10",
@@ -23,6 +24,8 @@
     "d3-shape": "^1.3.7",
     "expo": "^42.0.0",
     "expo-background-fetch": "~9.2.2",
+    "expo-barcode-scanner": "~10.2.2",
+    "expo-camera": "~11.2.2",
     "expo-localization": "~10.2.0",
     "expo-network": "~3.2.0",
     "expo-notifications": "~0.12.3",
@@ -35,9 +38,11 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-chart-kit": "^2.6.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-maps": "0.28.0",
     "react-native-paper": "^3.10.1",
+    "react-native-poll": "^0.1.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
@@ -45,7 +50,7 @@
     "react-native-tab-view": "^2.15.1",
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "^0.17.1",
     "react-native-wheel-of-fortune": "0.0.8",
     "redux": "^4.0.5"
   },
